# universal-evm-listener

./: .env.example  .gitignore  .pm2-logrotate.json  ANSWERS_TO_QUESTIONS.md  API_DOCUMENTATION.md  API_REVIEW.md  ARCHITECTURE_POLLING_MODE.md  BUGFIX_CONCURRENT_BACKFILL.md  BUGFIX_UNHANDLED_CLOSE_EVENTS.md  BUGFIX_WEBSOCKET_DEATH_DETECTION.md  CHANGELOG.md  COMPARISON_LISTENERS.md  DEPLOYMENT_SUMMARY.md  DEPLOY_CHECKLIST.md  DEPLOY_LATEST_FIXES.md  DEPLOY_POLLING_MODE.md  DEPLOY_WEBSOCKET_FIX.md  ENABLE_ALL_NETWORKS.md  EXISTING_DEPLOYMENT_UPDATE.md  FEATURES.md  IMPROVEMENTS.md  INTEGRATION_GUIDE.md  LOG_MANAGEMENT.md  OPTIMIZATION_API_CALLS.md  OPTIMIZATION_ASYNC_BACKFILL.md  PM2_DEPLOYMENT.md  PORT_CONFIG.md  PRODUCTION_DEPLOY.md  PRODUCTION_READY.md  PROJECT_STRUCTURE.md  QUICK_START.md  QUICK_START_PM2.md  README.md  RELIABILITY.md  SETUP.md  SMART_RELIABLE_IMPLEMENTATION.md  SUMMARY_ALL_CHANGES.md  TEST_RESULTS.md  deploy.sh  docker-compose.yml  (+9 more)
docs/: API_TESTS.md
examples/: query-example.ts
legacy/: deduplication.ts
legacy/listeners/: pollingErc20Listener.ts  smartReliableErc20Listener.ts
rust-listener/: .env.example  .gitignore  Cargo.toml
rust-listener/src/: config.rs  db.rs  fusion.rs  main.rs  poller.rs  rpc.rs  types.rs
src/: index.ts
src/api/: backfillEndpoint.ts  server.ts
src/cache/: postgres.ts  redis.ts  sqlite.ts
src/config/: networks.ts
src/listeners/: erc20Listener.ts  nativeListener.ts  pollingErc20Listener.ts  smartReliableErc20Listener.ts  smartReliableNativeListener.ts
src/monitoring/: eventMonitor.ts
src/types/: index.ts
(+5 files in other folders)
